src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-dwP0.25-dhP0.5-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AN\nconfig:\nwindow-rule {\n    open-maximized true\n    default-column-width { proportion 0.25; }\n    default-window-height { proportion 0.5; }\n}"
expression: snapshot
---
initial configure:
size: 1248 × 336, bounds: 1248 × 688, states: []

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1248 × 336, bounds: 1248 × 688, states: [Activated]
